media/css/tabzilla/tabzilla.less
/* ... */
#tabzilla.tabzilla-opened:after {
    -moz-transform: rotate(180deg);
    -webkit-transform: rotate(180deg);
    transform: rotate(180deg);
}

// Tab panel

#tabzilla-panel {
    height: 0;
    background: #fff;
    font-family: 'Open Sans', sans-serif;
    font-style: normal;
    font-weight: normal;
    line-height: 1.3;
    font-size: 11px;
    color: #484848;
    position: relative;
    overflow: hidden;
    direction: ltr;
    zoom: 1;
}

#tabzilla-panel:focus {
    outline:none;
}

#tabzilla-contents {
    width: 960px;
    margin: 0 auto;
    padding: 0 10px;
    text-align: left;
    position: relative;
    display:none;
}

#tabzilla-panel.open #tabzilla-contents {
    display: block;
}

* html #tabzilla-contents             { zoom: 1; } //
*:first-child+html #tabzilla-contents { zoom: 1; } //

#tabzilla-contents:after {
    visibility: hidden;
    display: block;
    font-size: 0;
    content: " ";
    clear: both;
    height: 0;
}

#tabzilla-promo {
    float: left;
    display: inline;
    width: 300px;
    height: 210px;
    margin: 0 10px;
    background: #f8f8f8;
    position: relative;
    font-size: 13px;
    line-height: 1.5;
}

#tabzilla-promo .snippet img {
    position: absolute;
    top: 40px;
    left: 20px;
}

#tabzilla-promo .snippet {
    padding: 40px;
}

#tabzilla-promo .snippet h4,
#tabzilla-panel #tabzilla-nav,
#tabzilla-panel #tabzilla-nav h2 {
    margin: 0;
    padding: 0;
    font-family: 'Open Sans', sans-serif;
    color: #484848;
    font-style: normal;
    font-weight: normal;
    text-transform: uppercase;
    border: 0;
}

#tabzilla-panel #tabzilla-nav {
    float: left;
    display: inline;
    width: 620px;
    margin: 0 10px;
}

#tabzilla-promo .snippet h4 {
    line-height: 1.1;
    font-size: 13px;
    font-weight: bold;
    margin-bottom: .4em;
    word-wrap: break-word;
}

#tabzilla-panel #tabzilla-nav h2 {
    font-weight: bold;
    font-size: 13px;
    margin: 0 20px .4em 0;
    word-wrap: break-word;
    letter-spacing: -1px;
}

#tabzilla-panel #tabzilla-nav ul {
    margin: 0;
    padding: 0;
    font-size: inherit;
}

#tabzilla-panel #tabzilla-nav ul li {
    float: left;
    display: inline;
    list-style-type: none;
    width: 17%;
    margin: 40px 3% 0 -1px;
    padding: 0;
    line-height: 1.1;
    border-right: 1px dotted #ccc;
}

* html #tabzilla-panel #tabzilla-nav ul li {
    margin-right: 10px; // IE6 width oddity workaround
}

#tabzilla-panel #tabzilla-nav ul li ul li {
    float: none;
    margin: 0;
    height: auto;
    border: 0;
}

#tabzilla-panel #tabzilla-nav a {
    color: #484848;
    display: block;
    padding: .4em 20px .4em 0;
    outline: 0;
}

#tabzilla-panel a,
#tabzilla-panel a:link,
#tabzilla-panel a:visited {
    text-decoration: none;
}

#tabzilla-panel a:hover,
#tabzilla-panel a:active,
#tabzilla-panel a:focus {
    text-decoration: underline;
}

#tabzilla-panel #tabzilla-nav ul li#tabzilla-search {
    border: 0;
}

#tabzilla-panel #tabzilla-nav ul li#tabzilla-search a {
    padding-top: 0;
}

#tabzilla-panel #tabzilla-nav ul li#tabzilla-search form  {
    margin: .4em 20px .4em 0;
}

#tabzilla-panel #tabzilla-nav ul li#tabzilla-search input {
    width: 90px;
    background: #fafafa;
    color: #484848;
    border: 1px solid #ddd;
    -moz-border-radius: 6px;
    -webkit-border-radius: 6px;
    border-radius: 6px;
    -moz-box-shadow: 0 0 0 3px rgba(0,0,0,.02) inset;
    -webkit-box-shadow: 0 0 0 3px rgba(0,0,0,.02) inset;
    box-shadow: 0 0 0 3px rgba(0,0,0,.02) inset;
    -webkit-appearance: none;
    padding: 4px;
    -moz-transition: all .2s linear;
    -webkit-transition: all .2s linear;
    transition: all .2s linear;
    font-size: 12px;
}

#tabzilla-panel #tabzilla-nav ul li#tabzilla-search input:hover {
    border-color: #ccc;
}

#tabzilla-panel #tabzilla-nav ul li#tabzilla-search input:focus {
    outline: 0;
    border-color: #999;
}

#tabzilla-search label{
    position:absolute;
    left:-10000px;
    top:auto;
    width:1px;
    height:1px;
    overflow:hidden;
}
.html-rtl #tabzilla-search label{
    left:auto;
    right:-10000px;
}

#tabzilla-panel #tabzilla-nav ul li#tabzilla-search input::-webkit-input-placeholder { color: #ddd; }
#tabzilla-panel #tabzilla-nav ul li#tabzilla-search input:-moz-placeholder           { color: #ddd; }

// Firefox Flicks Promo

#tabzilla-promo .snippet {
    padding: 0;
}

#tabzilla-promo .snippet a {
    display: block;
    padding: 40px 35px 40px 95px;
    height: 130px;
    background-repeat: no-repeat;
    color: #484848;
    -webkit-transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    -o-transition: all .2s ease-in-out;
    -ms-transition: all .2s ease-in-out;
    transition: all .2s ease-in-out;
}

#tabzilla-promo .snippet a:hover,
#tabzilla-promo .snippet a:active {
    text-decoration: none;
    background-color: #f0f0f0;
}

#tabzilla-promo .snippet p {
    margin: 0;
    color: inherit;
    font-family: inherit;
}

#tabzilla-promo .snippet#tabzilla-promo-flicks a {
    padding: 40px 35px;
    background-color: #212a2f;
    background-image: url('/media/img/tabzilla/promo-flicks.jpg');
    background-position: 0 100%;
    overflow: hidden;
}

#tabzilla-promo .snippet#tabzilla-promo-flicks a h4,
#tabzilla-promo .snippet#tabzilla-promo-flicks a p {
	position: relative;
	left: -400px;
}

#tabzilla-promo .snippet#tabzilla-promo-fxos a {
    background-image: url('/media/img/tabzilla/promo-fxos.png');
    background-position: 0 0;
    background-color: #226aa7;
    color: #fff;
    font-size: 12px;
    padding: 20px;
    height: 170px;
    line-height: 20px;
    h4 {
        text-shadow: none;
        color: #fff;
        font-family: Open Sans ExtraBoldItalic;
        text-transform: uppercase;
        letter-spacing: -3px;
        font-weight: normal;
        font-size: 54px;
        line-height: 46px;
        margin-top: 10px;
        margin-bottom: 20px;
    }
    p {
        font-size: 18px;
        width: 150px;
    }
}
/* ... */

